2014-01-26  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* dos/dos_sb.c: Bring indentation more into line with the apparent standard.

* dos/sound_dos.c, dos/dos_sb.[ch], configure.ac: Apply SOUND_THIN_API to DOS
  sound. Also fix two old bugs: pitch being wrong, and sound not working in
  one-shot mode (DSP 1.xx).


2014-01-18  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* ui.c: Fix obvious mistake in System Settings, that lead to buffer overflow.

* cartridge.c, DOC/cart.txt, DOC/CREDITS: Fixes by Matthias Reichl for
  emulation of The!Cart.


2013-12-28  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.c: Make turbo mode considerably faster, by avoiding pointless screen
  redraws.

* sdl/sound.c, sound.c: Fix stereo sound on SDL and -sound/-nosound parameters,
  broken when introducing SOUND_THIN_API.


2013-12-15  Tomasz Krasuski  <kr0tki@poczta.onet.pl>
* atari.c, util.[ch]: Atari_time and Atari_sleep renamed to Util_* and moved to
  util.c module - they are now used externally from atari.c.

* atari.c, cfg.c, platform.h, sound_oss.c, sound.[ch], ui.c,
  javanvm/atari800.java, javanvm/javanvm.h, javanvm/sound.c, sdl/sound.c,
  configure.ac, atari800.man, DOC/USAGE: Formerly SDL-specific support for
  synchronized sound moved to new module sound.c and made platform-independent.
  In effect, created a new thin API for platform-specific audio. Platforms that
  support SOUND_THIN_API will have thinner layer of platform-specific sound
  code and will support a common set of new functionality:
  - ability to build with --enable-synchronized_sound,
  - new UI Sound menu options for enabling/disabling sound, setting sample
    rate, choosing 8- or 16-bit sound, setting hardwares ound buffer size, and
    (with enabled synchronized_sound) setting sound latency,
  - saving these new options in config, and setting them from command line
    parameters.
  Currently SOUND_THIN_API is implemented for SDL, JavaNVM and OSS sound.

